--- a/assets/js/manifest.json
+++ b/assets/js/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "BD",
-    "name": "Bogota Designs",
+    "short_name": "BadDuck",
+    "name": "BadDuck",
     "id": "/index.html",
     "icons": [
         {
